--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4f639c11",
    "metadata": {},
    "outputs": [],
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4143c5d6",
    "metadata": {},
    "outputs": [
@@ -543,109 +543,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression\n",
-      "KNN\n",
-      "SVM\n",
-      "DecisionTree\n",
-      "XGBoost\n",
-      "RandomFores\n",
-      "NeuralNetwork\n"
+      "LogisticRegression\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>f1_macro</th>\n",
-       "      <th>balanced_acc</th>\n",
-       "      <th>roc</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>model</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>RandomFores</th>\n",
-       "      <td>0.680918</td>\n",
-       "      <td>0.696045</td>\n",
-       "      <td>0.828686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KNN</th>\n",
-       "      <td>0.667756</td>\n",
-       "      <td>0.688778</td>\n",
-       "      <td>0.824594</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>XGBoost</th>\n",
-       "      <td>0.666198</td>\n",
-       "      <td>0.677008</td>\n",
-       "      <td>0.821365</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DecisionTree</th>\n",
-       "      <td>0.659499</td>\n",
-       "      <td>0.673402</td>\n",
-       "      <td>0.788340</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NeuralNetwork</th>\n",
-       "      <td>0.592623</td>\n",
-       "      <td>0.615098</td>\n",
-       "      <td>0.748239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LogisticRegression</th>\n",
-       "      <td>0.538733</td>\n",
-       "      <td>0.575519</td>\n",
-       "      <td>0.727960</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SVM</th>\n",
-       "      <td>0.532177</td>\n",
-       "      <td>0.571631</td>\n",
-       "      <td>0.716816</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    f1_macro  balanced_acc       roc\n",
-       "model                                               \n",
-       "RandomFores         0.680918      0.696045  0.828686\n",
-       "KNN                 0.667756      0.688778  0.824594\n",
-       "XGBoost             0.666198      0.677008  0.821365\n",
-       "DecisionTree        0.659499      0.673402  0.788340\n",
-       "NeuralNetwork       0.592623      0.615098  0.748239\n",
-       "LogisticRegression  0.538733      0.575519  0.727960\n",
-       "SVM                 0.532177      0.571631  0.716816"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "GridSearchCV.__init__() got an unexpected keyword argument 'random_state'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 77\u001b[0m\n\u001b[0;32m     75\u001b[0m pipe\u001b[38;5;241m.\u001b[39msteps\u001b[38;5;241m.\u001b[39mappend((\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclf\u001b[39m\u001b[38;5;124m'\u001b[39m, model_class(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mmodel_args)))\n\u001b[0;32m     76\u001b[0m \u001b[38;5;28mprint\u001b[39m(name)\n\u001b[1;32m---> 77\u001b[0m gs \u001b[38;5;241m=\u001b[39m \u001b[43mGridSearchCV\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpipe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscoring\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mscoring\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrefit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mf1_macro\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_jobs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m42\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     78\u001b[0m gs\u001b[38;5;241m.\u001b[39mfit(X, y_encoded)\n\u001b[0;32m     79\u001b[0m best_models[name] \u001b[38;5;241m=\u001b[39m gs\u001b[38;5;241m.\u001b[39mbest_estimator_\n",
+      "\u001b[1;31mTypeError\u001b[0m: GridSearchCV.__init__() got an unexpected keyword argument 'random_state'"
+     ]
     }
    ],
    "source": [
@@ -668,7 +578,7 @@
     "        df_metrics.append(df)\n",
     "    return pd.concat(df_metrics, axis=1).assign(model=model)\n",
     "\n",
-    "cv = StratifiedKFold(n_splits=10, shuffle=True, random_state=SEED)\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=SEED)\n",
     "scoring = {'f1_macro':'f1_macro', 'balanced_acc':'balanced_accuracy', 'roc': 'roc_auc_ovr_weighted'}\n",
     "pipe = Pipeline([('prep', preprocess), ('smote_resampling', SMOTE(random_state=42))])\n",
     "\n",
@@ -709,7 +619,7 @@
     "    'NeuralNetwork': (\n",
     "        MLPClassifier,\n",
     "        {'random_state': SEED,},\n",
-    "        {\"clf__hidden_layer_sizes\": [(10,), (20,), (10, 5), (20,10), (20,10,5)],\n",
+    "        {\"clf__hidden_layer_sizes\": [(5,), (10), (10, 5), (10,50), (10,5,3)],\n",
     "        \"clf__activation\": [\"tanh\", \"relu\", 'logistic'],\n",
     "        \"clf__solver\": [\"adam\", \"sgd\"],\n",
     "        \"clf__alpha\": [0.0001, 0.001, 0.01],\n",
@@ -725,7 +635,7 @@
     "for name, (model_class, model_args, grid) in candidates.items():\n",
     "    pipe.steps.append(('clf', model_class(**model_args)))\n",
     "    print(name)\n",
-    "    gs = GridSearchCV(pipe, grid, cv=cv, scoring=scoring, refit='f1_macro', n_jobs=-1, random_state=42)\n",
+    "    gs = GridSearchCV(pipe, grid, cv=cv, scoring=scoring, refit='f1_macro', n_jobs=-1)\n",
     "    gs.fit(X, y_encoded)\n",
     "    best_models[name] = gs.best_estimator_\n",
     "    cv_summary[name] = {'best_params': gs.best_params_, 'best_cv_f1_macro': float(gs.best_score_)}\n",
