bug in args export

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -547,15 +547,119 @@
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "GridSearchCV.__init__() got an unexpected keyword argument 'random_state'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 77\u001b[0m\n\u001b[0;32m     75\u001b[0m pipe\u001b[38;5;241m.\u001b[39msteps\u001b[38;5;241m.\u001b[39mappend((\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclf\u001b[39m\u001b[38;5;124m'\u001b[39m, model_class(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mmodel_args)))\n\u001b[0;32m     76\u001b[0m \u001b[38;5;28mprint\u001b[39m(name)\n\u001b[1;32m---> 77\u001b[0m gs \u001b[38;5;241m=\u001b[39m \u001b[43mGridSearchCV\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpipe\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscoring\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mscoring\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrefit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mf1_macro\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_jobs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m42\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     78\u001b[0m gs\u001b[38;5;241m.\u001b[39mfit(X, y_encoded)\n\u001b[0;32m     79\u001b[0m best_models[name] \u001b[38;5;241m=\u001b[39m gs\u001b[38;5;241m.\u001b[39mbest_estimator_\n",
-      "\u001b[1;31mTypeError\u001b[0m: GridSearchCV.__init__() got an unexpected keyword argument 'random_state'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "  warnings.warn(\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNN\n",
+      "SVM\n",
+      "DecisionTree\n",
+      "XGBoost\n",
+      "RandomFores\n",
+      "NeuralNetwork\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>f1_macro</th>\n",
+       "      <th>balanced_acc</th>\n",
+       "      <th>roc</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>RandomFores</th>\n",
+       "      <td>0.685685</td>\n",
+       "      <td>0.697746</td>\n",
+       "      <td>0.834988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XGBoost</th>\n",
+       "      <td>0.667855</td>\n",
+       "      <td>0.685570</td>\n",
+       "      <td>0.831836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KNN</th>\n",
+       "      <td>0.669570</td>\n",
+       "      <td>0.682562</td>\n",
+       "      <td>0.822614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DecisionTree</th>\n",
+       "      <td>0.654181</td>\n",
+       "      <td>0.662877</td>\n",
+       "      <td>0.797633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NeuralNetwork</th>\n",
+       "      <td>0.597109</td>\n",
+       "      <td>0.615199</td>\n",
+       "      <td>0.757504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LogisticRegression</th>\n",
+       "      <td>0.533656</td>\n",
+       "      <td>0.567981</td>\n",
+       "      <td>0.725586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SVM</th>\n",
+       "      <td>0.515987</td>\n",
+       "      <td>0.549293</td>\n",
+       "      <td>0.719995</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    f1_macro  balanced_acc       roc\n",
+       "model                                               \n",
+       "RandomFores         0.685685      0.697746  0.834988\n",
+       "XGBoost             0.667855      0.685570  0.831836\n",
+       "KNN                 0.669570      0.682562  0.822614\n",
+       "DecisionTree        0.654181      0.662877  0.797633\n",
+       "NeuralNetwork       0.597109      0.615199  0.757504\n",
+       "LogisticRegression  0.533656      0.567981  0.725586\n",
+       "SVM                 0.515987      0.549293  0.719995"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -655,10 +759,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "a526b8c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning:\n",
+      "\n",
+      "l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "\n",
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning:\n",
+      "\n",
+      "l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "\n",
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning:\n",
+      "\n",
+      "l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "\n",
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning:\n",
+      "\n",
+      "l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "\n",
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning:\n",
+      "\n",
+      "l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "\n",
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning:\n",
+      "\n",
+      "l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "\n",
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning:\n",
+      "\n",
+      "l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "\n",
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning:\n",
+      "\n",
+      "l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "\n",
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning:\n",
+      "\n",
+      "l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "\n",
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning:\n",
+      "\n",
+      "l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "\n",
+      "c:\\Users\\User\\miniconda3\\envs\\guajira\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1221: UserWarning:\n",
+      "\n",
+      "l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "args = dict()\n",
     "for name, (model_class, model_args, _) in candidates.items():\n",
@@ -678,7 +833,7 @@
     "with open(os.path.join(config.path['models'], \"LabelEncoder.pkl\"), \"wb\") as f:\n",
     "    pickle.dump(le, f)\n",
     "#exporting model parameters\n",
-    "content = '\\n'.join([f'{name} =  + {str(params)}' for name, params in args.items()])\n",
+    "content = '\\n'.join([f'{name} = {str(params)}' for name, params in args.items()])\n",
     "with open(os.path.join('src', 'config', 'models_args.py'), mode='w') as f:\n",
     "    f.write(content)"
    ]
@@ -693,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "bfbd5810",
    "metadata": {},
    "outputs": [],
